feat(database): remove logs sequelize

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <video src="/episodes/stream/?videoUrl=videos/course-4/X2Download.app-Big Buck Bunny.mp4&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MywiZmlyc3ROYW1lIjoiQWRtaW4iLCJlbWFpbCI6ImFkbWluQGFkbWluLmNvbSIsImlhdCI6MTY3NTc2MjA3NywiZXhwIjoxNjc2MzY2ODc3fQ.ljshj_QJ9g6CVGCCzbQHsiQDc2LRnHwF9tsT-aCQWk0" controls></video>
+  <video src="/episodes/stream/?videoUrl=videos/course-4/$UICIDEBOY$ - 122 DAYS (Rick And Morty Music Video).mp4&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MywiZmlyc3ROYW1lIjoiQWRtaW4iLCJlbWFpbCI6ImFkbWluQGFkbWluLmNvbSIsImlhdCI6MTY3NjQyMzI2OSwiZXhwIjoxNjc3MDI4MDY5fQ.Elo1RQkWZdwiOwVKfJmh4ORi2lrJp7HGh6atooBx_2s" controls></video>
 </body>
 </html>
